--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ body {
   top: 20px;
   display: flex;
   align-self: flex-start;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: auto;
