--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
   justify-content: center;
   width: 45px;
   height: 45px;
-  background: MediumSpringGreen;
+  background: rgb(253, 255, 254);
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 0 7px 14px 0 #3cb37199, inset 0px -5px 7px 0px MediumSeaGreen;
