--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ body {
   width: 100%;
   height: 100%;
   content: "";
-  background: MediumSpringGreen;
+  background: rgb(252, 253, 253);
   border-radius: 12px;
   box-shadow: 0 10px 20px 0 #000000bb, inset 0px -5px 10px 1px SeaGreen;
   opacity: 0;
@@ -514,7 +514,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, SpringGreen, SeaGreen);
+  background: linear-gradient(135deg, rgb(251, 253, 252), rgb(253, 253, 253));
   content: "";
   border-radius: 20px;
   mix-blend-mode: soft-light;
