--- a/style.css
+++ b/style.css
@@ -1174,7 +1174,9 @@ body {
   .clay-category p {
     font-size: 16pt;
   }
-  
+  .profile {
+    display: none;
+  }
   .profile-small {
     display: flex;
     flex-direction: row;
